// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxButton suites it render isChosen = false correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="chooseButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 18,
          "justifyContent": "center",
          "marginRight": 4,
          "width": 18,
        },
        {
          "borderColor": "rgba(12, 12, 14, 0.45)",
        },
      ]
    }
  />
  <Text
    style={
      [
        {
          "color": "rgba(12, 12, 14, 0.45)",
          "fontSize": 18,
          "fontWeight": "bold",
        },
        {
          "color": "rgba(12, 12, 14, 0.45)",
        },
      ]
    }
  >
    default checkbox
  </Text>
</View>
`;

exports[`CheckBoxButton suites it render isChosen = true correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 8,
      "opacity": 1,
      "width": "100%",
    }
  }
  testID="chooseButton"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "borderRadius": 4,
          "borderWidth": 1,
          "height": 18,
          "justifyContent": "center",
          "marginRight": 4,
          "width": 18,
        },
        {
          "borderColor": "#6A00C8",
        },
      ]
    }
  >
    <View
      style={
        {
          "backgroundColor": "#6A00C8",
          "borderRadius": 2,
          "height": 10,
          "width": 10,
        }
      }
    />
  </View>
  <Text
    style={
      [
        {
          "color": "rgba(12, 12, 14, 0.45)",
          "fontSize": 18,
          "fontWeight": "bold",
        },
        {
          "color": "#6A00C8",
        },
      ]
    }
  >
    default checkbox
  </Text>
</View>
`;
